<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="start_focus"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_start_focus_short"
        android:shortcutLongLabel="@string/shortcut_start_focus_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.ChronosFlow.VBCR"
            android:targetClass="com.ChronosFlow.VBCR.MainActivity">
            <extra
                android:name="com.ChronosFlow.VBCR.extra.INITIAL_SECTION"
                android:value="focus" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="quick_add"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_quick_add_short"
        android:shortcutLongLabel="@string/shortcut_quick_add_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.ChronosFlow.VBCR"
            android:targetClass="com.ChronosFlow.VBCR.MainActivity">
            <extra
                android:name="com.ChronosFlow.VBCR.extra.INITIAL_SECTION"
                android:value="day" />
            <!-- Land on the day view AND open the New Block sheet, so the shortcut actually
                 quick-adds a block instead of just opening the app (DayDialScreen "add-block"). -->
            <extra
                android:name="com.ChronosFlow.VBCR.extra.DAY_TARGET"
                android:value="add-block" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="capture_inbox"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_capture_inbox_short"
        android:shortcutLongLabel="@string/shortcut_capture_inbox_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.ChronosFlow.VBCR"
            android:targetClass="com.ChronosFlow.VBCR.MainActivity">
            <extra
                android:name="com.ChronosFlow.VBCR.extra.INITIAL_SECTION"
                android:value="day" />
            <!-- Open the quick-capture Inbox page (DayDialScreen "reading-inbox" launch target). -->
            <extra
                android:name="com.ChronosFlow.VBCR.extra.DAY_TARGET"
                android:value="reading-inbox" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="command_palette"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_command_palette_short"
        android:shortcutLongLabel="@string/shortcut_command_palette_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.ChronosFlow.VBCR"
            android:targetClass="com.ChronosFlow.VBCR.MainActivity">
            <extra
                android:name="com.ChronosFlow.VBCR.extra.INITIAL_SECTION"
                android:value="palette" />
        </intent>
    </shortcut>

    <capability android:name="actions.intent.CREATE_THING">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.ChronosFlow.VBCR"
            android:targetClass="com.ChronosFlow.VBCR.MainActivity">
            <parameter
                android:name="thing.name"
                android:key="query"/>
        </intent>
    </capability>
    <capability android:name="actions.intent.OPEN_APP_FEATURE">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.ChronosFlow.VBCR"
            android:targetClass="com.ChronosFlow.VBCR.MainActivity">
            <parameter
                android:name="feature"
                android:key="featureName"/>
        </intent>
    </capability>
</shortcuts>
